<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_hint">Don\'t have an account? Register</string>
    <string name="login_agree">"i agree to the "</string>
    <string name="privacy_policy">Privacy Policy Detail</string>
    <string name="reg_hint">Already have an account? Login</string>
    <string name="login_name">Email or ID</string>
    <string name="login_pwd">Password</string>
    <string name="login_btn">Login</string>
    <string name="reg_name">Name</string>
    <string name="reg_pwd">Password</string>
    <string name="reg_confirm_pwd">Confirm Password</string>
    <string name="reg_btn">Register</string>
    <string name="login_with_code">login in with code</string>
    <string name="login_setting">setting of server hostname</string>
    <string name="reg_login"><![CDATA[register & login]]></string>
    <string name="login_send_code">send me code</string>
    <string name="login_email">email | phone</string>
    <string name="login_fill_code">fill code here</string>
    <string name="login_submit_code">Submit Verification Code</string>
    <string name="login_back">back to Email Page</string>
    <string name="contact_recommend">recommended</string>
    <string name="contact_followed">followed</string>
    <string name="contact_following">following</string>
    <string name="contact_search">search</string>
    <string name="contact_fans">fans</string>
    <string name="send_msg">send</string>
    <string name="nick_name">nick</string>
    <string name="description">description</string>
    <string name="more_info">...</string>
    <string name="follow">follow</string>
    <string name="fan">fan</string>
    <string name="followed">followed</string>
    <string name="follow_back">follow back</string>
    <string name="mutual_following">mutual</string>
    <string name="group">group</string>
    <string name="user_id">user ID</string>
    <string name="age">age</string>
    <string name="gender">gender</string>
    <string name="phone">phone</string>
    <string name="mail">mail</string>
    <string name="introduce">introduce</string>
    <string name="password">password</string>
    <string name="code">code</string>
    <string name="record_audio_button_hint">record audio</string>
    <string name="send_message_button_hint">send</string>
    <string name="send_image_button_hint">choose image</string>
    <string name="send_file_button_hint">choose file</string>
    <string name="new_message_hint">type text</string>
    <string name="delete_recording_hint">delete record</string>
    <string name="stop_recording_button_hint">stop recording</string>
    <string name="play_record_audio_button_hint">play record</string>
    <string name="pause_audio_button_hint">pause audio</string>
    <string name="content_deleted">content deleted</string>

    <string name="action_cancel">cancel action</string>
    <string name="canceled">canceled</string>

    <string name="audio_recording_failed">audio record error</string>
    <string name="image_caption_hint">image name</string>
    <string name="file_name_label">file name</string>
    <string name="content_type_label">content type</string>
    <string name="image_size_label">"image size "</string>
    <string name="accept_avatar_button_hint">"accept avatar "</string>
    <string name="permission_missing">"permission_missing"</string>

    <string name="declined_call">Call declined</string>
    <string name="missed_call">Call missed</string>
    <string name="cancelled_call">Call cancelled</string>
    <string name="connecting_call">Connecting call...</string>
    <string name="in_progress_call">Call in progress...</string>
    <string name="disconnected_call">Call disconnected</string>

    <string name="audio">Call disconnected</string>
    <string name="picture">Call disconnected</string>
    <string name="attachment">Call disconnected</string>
    <string name="form">Call disconnected</string>
    <string name="incoming_call">Call disconnected</string>
    <string name="unknown">Call disconnected</string>

    <string name="outgoing_call">out going call</string>
    <string name="unavailable">unavailable</string>

    <string name="default_attachment_name">default attachment name</string>
    <string name="download_attachment">download attachment</string>
    <string name="open_attachment">open attachment</string>
    <string name="downloading">downloading %1$d%% </string>
    <string name="uploading">uploading %1$d%% </string>


    <string name="processing">processing</string>
    <string name="failed">failed</string>
    <string name="invalid_content">invalid_content</string>

    <string name="unable_to_play_audio">unable to play audio</string>


    <string name="action_reply">reply</string>
    <string name="action_forward">forward</string>


    <string name="network_not_ready">network is not ready, wait</string>
    <string name="user_id_error">user id input error</string>
    <string name="login_error">"can not Logging in with %s"</string>
    <string name="pwd_not_same">password should be same</string>
    <string name="pwd_need_change">blank means no change</string>

    <string name="confirm_delete">confirm delete</string>
    <string name="delete_message">make sure to delete?</string>
    <string name="confirm_unfollow">unfollow</string>
    <string name="unfollow_message">unfollow %s ?</string>
    <string name="btn_ok">ok</string>
    <string name="btn_cancel">cancel</string>
    <string name="btn_save">save</string>
    <string name="btn_close">close</string>

    <string name="msg_text">text</string>
    <string name="msg_voice">voice</string>
    <string name="msg_audio">audio</string>
    <string name="msg_file">file</string>
    <string name="msg_image">image</string>
    <string name="msg_video">video</string>

    <string name="share_to">share to </string>
    <string name="share_friends">select friends </string>
    <string name="hide">hide</string>
    <string name="delete">remove</string>

    <string name="input_remaining">can hold %1$d char</string>
    <string name="input_reach_max">text too long</string>

    <string name="not_friend">peer is not your friend, can not send msg yet</string>

    <string name="create_group">Create Group</string>
    <string name="click_avatar">"Click to set avatar"</string>
    <string name="group_name">Group Name</string>
    <string name="group_name_hint">Enter group name (required)</string>
    <string name="group_tag">Group Tag</string>
    <string name="group_tag_hint">e.g., Photography / Programming / Study Abroad</string>
    <string name="group_des">Group Description</string>
    <string name="group_des_hint">Introduce what this group is about</string>
    <string name="group_type">Group Type</string>
    <string name="group_type_public">Public Group</string>
    <string name="group_type_private">Private Group</string>
    <string name="group_join">Join Method</string>
    <string name="group_join_direct">Allow direct join</string>
    <string name="group_join_auth">Requires approval</string>
    <string name="group_join_invite">Invitation only</string>
    <string name="group_join_question">question and answer</string>
    <string name="group_join_question_hint">write a question</string>
    <string name="group_join_answer">answer</string>
    <string name="group_join_answer_hint">write answer here</string>
    <string name="group_setting">setting group</string>
    <string name="group_id">group id</string>
    <string name="group_kick">remove member</string>
    <string name="group_members">members</string>
    <string name="group_admins">admins</string>
    <string name="group_owner">owner</string>
    <string name="add_admins">add admins</string>
    <string name="group_invite">invite</string>
    <string name="group_quit">quit</string>
    <string name="group_dissolve">dissolve</string>
    <string name="group_transfer">transfer owner</string>
    <string name="group_history">group history</string>
    <string name="group_member">group members</string>
    <string name="friends">friends</string>

    <string name="group_create_fail">group create fail</string>
    <string name="group_create_success">group create success</string>
    <string name="group_update_fail">group update fail</string>
    <string name="group_update_success">group update success</string>

    <string name="menu_item_speaker">use speaker</string>
    <string name="menu_item_headmic">use head mic</string>
    <string name="join">join</string>
    <string name="number">number: </string>
    <string name="sys">System</string>
    <string name="sys_notice">[System]</string>
    <string name="group_prefix">[G]</string>
    <string name="me">[Me]</string>
    <string name="user_join_group_hint">user %s join group</string>
    <string name="user_quit_group_hint">user %s quit group</string>
    <string name="user_invite_group_hint2"> %s invite %s into group chat</string>
    <string name="user_kick_group_hint2"> %s remove %s from group chat</string>
    <string name="user_transfer_group_hint2"> %s transfer owner to  %s of group</string>
    <string name="user_set_admins_group_hint2"> %s set  %s to admins of group</string>
    <string name="user_remove_admins_group_hint2"> %s remove %s from admins</string>
    <string name="user_dissolve_group_hint"> %s dissolve group</string>

    <string name="block_send_to_group">you cannot send message to a group, that you are not in</string>
    <string name="block_send_to_friend">you cannot send message to a person, who does not follow you</string>
</resources>