<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- 扬声器播放选项 -->
    <item
        android:id="@+id/menu_speaker_play"
        android:icon="@drawable/ic_speaker_play"
        android:title="@string/menu_item_speaker" />
    <!-- 耳机播放选项 -->
    <item
        android:id="@+id/menu_headphone_play"
        android:icon="@drawable/ic_headphone_play"
        android:title="@string/menu_item_headmic"/>

    <item
        android:id="@+id/menu_group_invite"
        android:title="@string/group_invite"/>

    <item
        android:id="@+id/menu_setting_group"
        android:title="@string/group_setting"/>

    <item
        android:id="@+id/menu_group_history"
        android:title="@string/group_history"/>

    <item
        android:id="@+id/menu_group_quit"
        android:title="@string/group_quit"/>

    <item
        android:id="@+id/menu_add_group_admin"
        android:title="@string/add_admins"/>

    <item
        android:id="@+id/menu_group_transfer"
        android:title="@string/group_transfer"/>

    <item
        android:id="@+id/menu_group_dissolve"
        android:title="@string/group_dissolve"/>

</menu>