<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.LoginFragment">

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/login_setting"
        tools:src="@android:drawable/ic_menu_manage" />

    <!-- 居中的 ImageView -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/talkbird192s" />

    <!-- ViewSwitcher 位于 ImageView 之下 -->

    <ViewSwitcher
        android:id="@+id/loginViewSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <!-- 0.密码登录页面 -->
        <LinearLayout
            android:id="@+id/page_pwd_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/login_name" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/login_pwd"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_btn" />

            <TextView
                android:id="@+id/switchToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/login_hint" />

            <TextView
                android:id="@+id/switchToCodeLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/login_with_code" />

        </LinearLayout>


        <!-- 2：匿名注册视图 -->
        <LinearLayout
            android:id="@+id/page_pwd_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/reg_name" />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/reg_pwd"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/registerConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/reg_confirm_pwd"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_btn" />

            <TextView
                android:id="@+id/switchToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/reg_hint" />
        </LinearLayout>



    </ViewSwitcher>

    <!-- 复选框和链接 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/agreeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_agree" />

        <TextView
            android:id="@+id/privacyPolicyLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:text="@string/privacy_policy"
            android:textColor="@android:color/holo_blue_light" />
    </LinearLayout>
</RelativeLayout>

