<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/login_setting"
        tools:src="@android:drawable/ic_menu_manage" />

    <!-- Logo 或者标题 -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/talkbird192"
        android:contentDescription="Logo" />

    <!-- ViewSwitcher -->
    <ViewSwitcher
        android:id="@+id/verificationViewSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <!-- 页面1：提交邮箱地址 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/login_email" />

            <Button
                android:id="@+id/submitEmailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_send_code" />

            <TextView
                android:id="@+id/switchToSendVerification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/reg_login" />
        </LinearLayout>

        <!-- 页面2：发送验证码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/verificationCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_fill_code" />

            <Button
                android:id="@+id/submitVerificationCodeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_submit_code" />

            <TextView
                android:id="@+id/switchToSubmitEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/login_back" />
        </LinearLayout>
    </ViewSwitcher>

    <!-- 复选框和链接 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/agreeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/login_agree" />

        <TextView
            android:id="@+id/privacyPolicyLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:text="@string/privacy_policy"
            android:textColor="@android:color/holo_blue_light" />
    </LinearLayout>
</RelativeLayout>
